# interview-sim

./: .env.example  .gitignore  QUICKSTART.md  README.md  chat_eval.py  chat_test.py  demo_clean_modes.py  demo_eval_conversation.py  eval_assistant.py  evaluator.py  interview_assistant.py  interview_processor.py  main.py  package.json  pnpm-lock.yaml  prompt_base_auxiliary_interview.md  pyproject.toml  simulator.py  svelte.config.js  test-auth.js  vite.config.ts
agents/: README.md  __init__.py  base_agent.py  candidate_agent.py  eval_agent.py  experience_agent.py  hr_agent.py  interview_agent.py  interviewer_agent.py  profession_agent.py
cli/: README.md  __init__.py  app.py  menus.py
components/: __init__.py  cards.py  charts.py  data_manager.py  file_parser.py  header.py  selector.py  sidebar.py  status_tags.py
manager/: README.md  REFACTORING_SUMMARY.md  data_loader.py  data_processor.py  experience_extractor.py  interview_data_manager.py  models.py  storage_manager.py
modules/: README.md  __init__.py  data_analysis.py  eval_conversation.py  experience_extract.py  interview_assist.py  interview_sim.py  report_viewer.py
prompts/: candidate.yaml  dataset.yaml  hr.yaml  interviewer.yaml
simulation/: __init__.py  interview_simulator.py
src/: hooks.server.ts
src/lib/components/ui/: Icon.svelte
src/lib/data/: workbench.ts
src/lib/server/: auth.ts  logger.ts  workbench.ts
src/routes/: +page.svelte  layout.css
src/routes/(app)/: +layout.svelte
src/routes/logout/: +page.server.ts
utils/: convert_conversation.py  convert_resume_pdf.py
(+47 files in other folders)
