[project]
name = "interview-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "menglong",
    "pdfplumber>=0.11.8",
    "reportlab>=4.4.6",
]

[tool.uv.sources]
menglong = { git = "https://github.com/gcyyfun/menglong.git" }
